# testtesttesttest

./: .gitignore  ESP32-Code.code-workspace  Optimized Code.code-workspace
CrowPanel-P4/: build_c6_sdio_ota.bat  build_c6_sdio_ota_only.bat  build_p4.bat  build_p4_flasher.bat  flash_c6.bat  flash_c6_com13.bat  flash_c6_sdio_ota.bat  flash_c6_sdio_ota_only.bat  flash_p4.bat  flash_p4_flasher_only.bat  flash_p4_with_c6.bat  monitor_c6.bat  monitor_serial.bat  read_serial.py
CrowPanel-P4/c6_firmware/: CMakeLists.txt  build_c6.bat  build_c6_only.bat  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
CrowPanel-P4/c6_firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  ecast_crypto.h  ecast_protocol.h  espnow_bridge_handler.c  espnow_bridge_protocol.h  espnow_protocol.h  espnow_sink_c6.h
CrowPanel-P4/factory_project/: .gitignore  CMakeLists.txt  build_project.cmd  check_manifests.py  check_manifests2.py  check_names.py  flash_com13.cmd  flash_com13_monitor.cmd  partitions.csv  sdkconfig  sdkconfig.defaults  serial_monitor.py
CrowPanel-P4/factory_project/components/apps/: CMakeLists.txt  app_theme.h  apps.h
CrowPanel-P4/factory_project/components/apps/camera/: Camera.cpp
CrowPanel-P4/factory_project/components/apps/setting/: Setting.cpp  Setting.hpp  app_sntp.c
CrowPanel-P4/factory_project/components/apps/setting/ui/: CMakeLists.txt  ui.c  ui.h
CrowPanel-P4/factory_project/components/apps/setting/ui/images/: cp_logo_rev_home.c  theme_preview_calpoly_256x144.c  theme_preview_topography_256x144.c  theme_preview_vista_256x144.c
CrowPanel-P4/factory_project/components/apps/setting/ui/screens/: ui_ScreenSettingAbout.c  ui_ScreenSettingBLE.c  ui_ScreenSettingESPNOW.c  ui_ScreenSettingLight.c  ui_ScreenSettingMain.c  ui_ScreenSettingVerification.c  ui_ScreenSettingVolume.c  ui_ScreenSettingWiFi.c
CrowPanel-P4/factory_project/components/espnow_sink/: CMakeLists.txt  espnow_sink.c
CrowPanel-P4/factory_project/components/espressif__esp32_p4_function_ev_board/: Kconfig  esp32_p4_function_ev_board.c
CrowPanel-P4/factory_project/components/lc3plus_fixed/: CMakeLists.txt  basop_util.h  near_nyquist_detector_fx.c  setup_com_lc3plus.c
CrowPanel-P4/factory_project/components/liblc3/: CMakeLists.txt
CrowPanel-P4/factory_project/components/ota_slave/: CMakeLists.txt  (+2 more)
CrowPanel-P4/factory_project/components/sbc_codec/: CMakeLists.txt
CrowPanel-P4/factory_project/main/: CMakeLists.txt  idf_component.yml  main.cpp
CrowPanel-P4/p4_c6_flasher/: CMakeLists.txt  README.md  flash_p4_flasher.bat  sdkconfig  sdkconfig.defaults
CrowPanel-P4/p4_c6_flasher/main/: CMakeLists.txt  idf_component.yml  main.c
ESP32 WROVER Source/: CMakeLists.txt  esp-idf.code-workspace  partitions.csv  read_serial.py  sdkconfig  sdkconfig.defaults
ESP32 WROVER Source/build_cursor/: .bin_timestamp  .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  cmake_install.cmake  config.env  flash_app_args  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  storage-flash_args  x509_crt_bundle.S
ESP32 WROVER Source/build_cursor/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
ESP32 WROVER Source/build_cursor/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
ESP32 WROVER Source/build_cursor/esp-idf/: cmake_install.cmake
ESP32 WROVER Source/build_cursor/gdbinit/: gdbinit  symbols
ESP32 WROVER Source/build_cursor/log/: idf_py_stderr_output_14388  idf_py_stderr_output_19740  idf_py_stdout_output_14104  idf_py_stdout_output_14388  idf_py_stdout_output_19740  idf_py_stdout_output_2356  idf_py_stdout_output_50336  idf_py_stdout_output_50624  idf_py_stdout_output_51924
ESP32 WROVER Source/main/: CMakeLists.txt  Kconfig.projbuild  cp_logo_png.cpp  cp_logo_png.hpp  source_audio_stats.h  source_config.c  source_config.h  source_main.c  source_room_protocol.h  source_udp_control.c  source_udp_control.h  source_udp_stream.c  source_udp_stream.h  source_web.cpp  source_web.h  source_wifi.c  source_wifi.h
WindowsRoomReceiver/: App.xaml  App.xaml.cs  Converters.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  WindowsRoomReceiver.csproj
WindowsRoomReceiver/Audio/: AudioDeviceEnumerator.cs  AudioPlaybackEngine.cs  PcmRingBuffer.cs  SbcDecoder.cs
WindowsRoomReceiver/Models/: RoomModels.cs
WindowsRoomReceiver/Security/: CryptoUtil.cs  Dpapi.cs  SecureCredentialStore.cs
WindowsRoomReceiver/Services/: AudioReceiver.cs  AuthClient.cs  NetworkInterfaceSelector.cs  PairingService.cs  RoomControlChannel.cs  RoomDiscoveryService.cs  RoomProtocol.cs  RoomSessionManager.cs  UdpSocketUtil.cs
WindowsRoomReceiver/native/sbc/: build.bat
esp-now-audio-sink/: CMakeLists.txt  README.md  esp32-a2dp-sink.code-workspace  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp-now-audio-sink/components/liblc3/: CMakeLists.txt
esp-now-audio-sink/main/: CMakeLists.txt  ecast_crypto.c  ecast_crypto.h  esp32-a2dp-sink.code-workspace  main_adpcm.c  sink_app.c  sink_app.h
esp-now-audio-sink/main/audio/: sink_audio.c
esp-now-audio-sink/main/core/: sink_app_internal.h  sink_core.c
esp-now-audio-sink/main/net/: sink_net.c
esp-now-audio-source/: CMakeLists.txt  README.md  build_source.bat  flash_music.bat  flash_source.bat  flash_source_only.bat  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp-now-audio-source/components/minimp3/: CMakeLists.txt  linker.lf  minimp3_impl.c
esp-now-audio-source/main/: CMakeLists.txt  Kconfig.projbuild  ecast_secret.h.example  ecast_source.c  ecast_source.h  main_adpcm.c  source_app.c  source_app.h
esp-now-audio-source/main/audio/: ESP32-Code.code-workspace  source_audio.c
esp-now-audio-source/main/core/: source_app_internal.h  source_core.c
esp-now-audio-source/main/wifi/: source_wifi.c
esp-now-audio-source/tools/: udp_lc3_receiver.py  write_music.py
(+158 files in other folders)
